<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/save_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="Midterm_suttipong.Savedata_computer">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="29dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="บันทึกข้อมูล"
            android:textAlignment="center"
            android:textColor="#9E9C9C"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="375dp"
        android:layout_height="623dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/btn_choose_image"
                style="@style/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Upload Image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNamebrand"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="ชื่อแบรนด์ : "
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_Namebrand"
                style="@style/edit_text"
                android:autofillHints="@string/title_NameBrand"
                android:hint="@string/title_NameBrand"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtModel"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="ชื่อรุ่น :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_Model"
                style="@style/edit_text"
                android:autofillHints="@string/title_Model"
                android:hint="@string/title_Model"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSerialNumber"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="ซีเรียลนัมเบอร์ :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_SerialNumber"
                style="@style/edit_text1"
                android:autofillHints="@string/title_SerialNumber"
                android:hint="@string/title_SerialNumber"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="จำนวน :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_Quantity"
                style="@style/edit_text2"
                android:autofillHints="@string/title_Quantity"
                android:hint="@string/title_Quantity"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="ราคา :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_Price"
                style="@style/edit_text2"
                android:autofillHints="@string/title_Price"
                android:hint="@string/title_Price"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:text="ความเร็วซีพียู :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_CPUspeed"
                style="@style/edit_text3"
                android:autofillHints="@string/title_CPUspeed"
                android:hint="@string/title_CPUspeed"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMemory_capacity"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:text="ความจุหน่วยความจำ :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_Memory_Ram"
                style="@style/edit_text2"
                android:autofillHints="@string/title_MemoryRam"
                android:hint="@string/title_MemoryRam"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />

            <TextView
                android:id="@+id/txtMemory_Hardisk"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:text="ความจุฮาร์ดดิสก์ :"
                android:textAlignment="center"
                android:textColor="#9E9C9C"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_Memory_Harddisk"
                style="@style/edit_text2"
                android:autofillHints="@string/title_MemoryHarddisk"
                android:hint="@string/title_MemoryHarddisk"
                android:inputType="text"
                tools:ignore="TouchTargetSize" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="save" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>